--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>hello</title>
+    <link rel="stylesheet" href="./index.css">
+    <script src="index.js"></script>
 </head>
 <body>
     hello world
